Changelog for Products.PloneSurvey
==================================

1.4.7 - Unreleased
------------------

  * updated Spanish translation
    [Manuel Gualda Caballero]

  * Fix: mistake link url for @@Products.PloneSurvey.html_spreadsheet at survey_view_results.pt
    [terapyon] 

1.4.6 - 2013-05-19
------------------

  * Fix: hide respondent names in html_spreadsheet for confidential surveys
    [Gaudenz Steinlin]
  * Fix: avoid overwriting authenticated respondent data when refreshing the
    survey_view [david.batranu]
  * Fix: fixing spreadsheet3 export for multiple select question
    [david.batranu]
  * Fix: url quoting respondent keys to fix key login [david.batranu]
  * Fix: fixing answers attribute check for matrix questions [david.batranu]
  * Fix: int iteration and Attribute Error in Survey.py [david.batranu]
  * Updated package to new i18n translation framework
    [sauzher]

1.4.5 - 2012-10-14
------------------

  * Plone 4.3 compatibility
    [alert]

  * Include Products.CMFCore permissions.zcml for Plone 4.1 compatibility
    [gaudenzius]

  * Fixed italian translation
    [keul]

1.4.4 - 2011-05-09
------------------

  * Add a MANIFEST.in file to fix the 1.4.3 release bug
    [encolpe]

1.4.3 - 2011-05-05
------------------

  * Fix z3c.rml dependency
    [encolpe]

  * Fix permission typo
    [jriboux]

  * Very basic survey printing using z3c.rml
    [Michael Davis]

  * Add browser layers, add an add survey permission, fix the results permission
    [Michael Davis]

1.4.2 - 2011-02-23
-------------------

  * Patch from Gaudenz Steinlin for Sendmail issue in Plone4
    [Michael Davis]
  * Is now possible to translate also default values for some questions content type
    [keul]
  * The use of i18dude now translate a lot of new entries, not translable before
    [keul]
  * Many "plone" msgid moved to a more correct "plonesurvey" domain
    [keul]
  * Added internal "*folder_factories*" view to see Plone Survey subtypes translated